discount and story section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <div class="wrapper">
             <div class="head_top">
                 <div class="logo">
-                    <a href="index.html"><img src="https://preview.uideck.com/items/furnish-opl/assets/images/logo.png"></a>
+                    <a href="index.html">
+                        <img src="image/logo.png">
+                    </a>
                 </div>
                 <div class="menu">
                     <nav>
@@ -33,6 +35,53 @@
     <section id="slider">
         <div class="wrapper">
 
+        </div>
+    </section>
+    <section id="discount_product">
+        <div class="wrapper">
+            <div class="discount_product_otr clearfix">
+                <div class="discount_product_col col-6">
+                    <div class="discount_product_img">
+                        <img src="image/product-1.jpg">
+                        <div class="discount_product_text">
+                            <h3>High-quality furnitures <br>For your Home</h3>
+                            <a href="#.">View Collection</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="discount_product_col col-6">
+                    <div class="discount_product_img">
+                        <img src="image/product-2.jpg">
+                        <div class="discount_product_text">
+                            <h3>Hot offer <br>Discount up to 80%</h3>
+                            <a href="#.">View Collection</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="service">
+        <div class="wrapper">
+            <div class="service_top clearfix">
+                <div class="service_top_col col-6">
+                    <div class="service_title">
+                        <h4>Our Story</h4>
+                        <h2>Build Your Sweet Home</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusm od tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="service_bottom clearfix">
+                <div class="service_bottom_col col-6">
+                    <div class="service_bottom_img">
+                        <img src="image/services.jpg" alt="">
+                    </div>
+                    <div class="btn_org">
+                        <a href="#.">Read More</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
