changes in discount and story section

--- a/index.html
+++ b/index.html
@@ -63,22 +63,68 @@
     </section>
     <section id="service">
         <div class="wrapper">
-            <div class="service_top clearfix">
-                <div class="service_top_col col-6">
-                    <div class="service_title">
-                        <h4>Our Story</h4>
-                        <h2>Build Your Sweet Home</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusm od tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+            <div class="service_inr">
+                <div class="service_top clearfix">
+                    <div class="service_top_col col-6">
+                        <div class="service_title">
+                            <h4>Our Story</h4>
+                            <h2>Build Your Sweet Home</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusm od tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="service_bottom clearfix">
-                <div class="service_bottom_col col-6">
-                    <div class="service_bottom_img">
-                        <img src="image/services.jpg" alt="">
+                <div class="service_bottom clearfix">
+                    <div class="service_bottom_col col-6">
+                        <div class="service_bottom_img">
+                            <img src="image/services.jpg" alt="">
+                        </div>
+                        <div class="btn_org">
+                            <a href="#.">Read More</a>
+                        </div>
                     </div>
-                    <div class="btn_org">
-                        <a href="#.">Read More</a>
+                    <div class="service_bottom_col col-6">
+                        <div class="service_bottom_types clearfix">
+                            <div class="service_bottom_types_col col-6">
+                                <div class="service_bottom_types_col_inr">
+                                    <div class="service_bottom_types_icon">
+                                        <img src="#." alt="">
+                                    </div>
+                                    <div class="service_bottom_types_text">
+                                        <h5>furnitures</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusm od tempor.</p>
+                                    </div>
+                                </div>
+                                <div class="service_bottom_types_col_inr">
+                                    <div class="service_bottom_types_icon">
+                                        <img src="#." alt="">
+                                    </div>
+                                    <div class="service_bottom_types_text">
+                                        <h5>decoration</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusm od tempor.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="service_bottom_types_col col-6">
+                                <div class="service_bottom_types_col_inr">
+                                    <div class="service_bottom_types_icon">
+                                        <img src="#." alt="">
+                                    </div>
+                                    <div class="service_bottom_types_text">
+                                        <h5>consultancy</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusm od tempor.</p>
+                                    </div>
+                                </div>
+                                <div class="service_bottom_types_col_inr">
+                                    <div class="service_bottom_types_icon">
+                                        <img src="#." alt="">
+                                    </div>
+                                    <div class="service_bottom_types_text">
+                                        <h5>custom orders</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusm od tempor.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
