--- a/index.html
+++ b/index.html
@@ -130,6 +130,118 @@
             </div>
         </div>
     </section>
+    <section id="showcase">
+        <div class="wrapper">
+            <div class="showcase_inr">
+                <div class="showcase_top clearfix">
+                    <div class="col-4">
+                        <div class="showcase_title">
+                            <h3>Showcase</h3>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="showcase_text">
+                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempo.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="team">
+        <div class="wrapper">
+            <div class="team_inr">
+                <div class="team_top">
+                    <h3>Our Expert Team</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusm od tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                </div>
+                <div class="team_bottom clearfix">
+                    <div class="team_col col-3">
+                        <div class="team_col_inr">
+                            <div class="team_col_img">
+                                <img src="image/t-1.jpg" alt="">
+                            </div>
+                            <div class="team_col_content">
+                                <div class="team_col_title">
+                                    <a href="#.">Celina Gomez</a>
+                                </div>
+                                <h6>FOUNDER</h6>
+                                <div class="team_col_social">
+                                    <ul>
+                                        <li><a href="#."><img src="" alt="facebook"></a></li>
+                                        <li><a href="#."><img src="" alt="facebook"></a></li>
+                                        <li><a href="#."><img src="" alt="facebook"></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team_col col-3">
+                        <div class="team_col_inr">
+                            <div class="team_col_img">
+                                <img src="image/t-2.jpg" alt="">
+                            </div>
+                            <div class="team_col_content">
+                                <div class="team_col_title">
+                                    <a href="#.">Patric Green</a>
+                                </div>
+                                <h6>consultant</h6>
+                                <div class="team_col_social">
+                                    <ul>
+                                        <li><a href="#."><img src="" alt="facebook"></a></li>
+                                        <li><a href="#."><img src="" alt="twitter"></a></li>
+                                        <li><a href="#."><img src="" alt="instagram"></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team_col col-3">
+                        <div class="team_col_inr">
+                            <div class="team_col_img">
+                                <img src="image/t-3.jpg" alt="">
+                            </div>
+                            <div class="team_col_content">
+                                <div class="team_col_title">
+                                    <a href="#.">Mark Parker</a>
+                                </div>
+                                <h6>business manager</h6>
+                                <div class="team_col_social">
+                                    <ul>
+                                        <li><a href="#."><img src="" alt="facebook"></a></li>
+                                        <li><a href="#."><img src="" alt="twitter"></a></li>
+                                        <li><a href="#."><img src="" alt="instagram"></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team_col col-3">
+                        <div class="team_col_inr">
+                            <div class="team_col_img">
+                                <img src="image/t-4.jpg" alt="">
+                            </div>
+                            <div class="team_col_content">
+                                <div class="team_col_title">
+                                    <a href="#.">Daryl Dixon</a>
+                                </div>
+                                <h6>marketing manager</h6>
+                                <div class="team_col_social">
+                                    <ul>
+                                        <li><a href="#."><img src="" alt="facebook"></a></li>
+                                        <li><a href="#."><img src="" alt="twitter"></a></li>
+                                        <li><a href="#."><img src="" alt="instagram"></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script type="text/javascript" src="js/slick.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
