--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <section id="team">
         <div class="wrapper">
             <div class="team_inr">
-                <div class="team_top">
+                <div class="team_top title">
                     <h3>Our Expert Team</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusm od tempor incididunt ut labore et dolore magna aliqua.
@@ -242,7 +242,150 @@
             </div>
         </div>
     </section>
-
+    <section id="blog">
+        <div class="wrapper">
+            <div class="blog_inr">
+                <div class="blog_top title">
+                    <h3>From The Blog</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                </div>
+                <div class="blog_bottom clearfix">
+                    <div class="blog_col col-4">
+                        <div class="    ">
+                            <div class="blog_col_img">
+                                <img src="image/b-1.jpg" alt="">
+                            </div>
+                            <div class="blog_col_content">
+                                <div class="blog_col_content_top">
+                                    <a href="#.">Rowan an orangutan known & loved</a>
+                                    <span>25 JULY, 2022</span>
+                                </div>
+                                <div class="blog_col_content_bottom">
+                                    <div class="blog_col_content_bottom_left">
+                                        <div class="blog_content_left_img">
+                                            <img src="image/admin.jpg" alt="">
+                                        </div>
+                                        <h5 class="blog_left_img_title">
+                                            <a href="#.">J.parker</a>
+                                        </h5>
+                                    </div>
+                                    <div class="blog_col_content_bottom_right">
+                                        <ul>
+                                            <li>
+                                                <a href="#."><img src="image/share.png" alt="share"></a>
+                                            </li>
+                                            <li>
+                                                <a href="#."><img src="image/heart.png" alt="like"></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog_col col-4">
+                        <div class="blog_col_inr">
+                            <div class="blog_col_img">
+                                <img src="image/b-2.jpg" alt="">
+                            </div>
+                            <div class="blog_col_content">
+                                <div class="blog_col_content_top">
+                                    <a href="#.">Rowan an orangutan known & loved</a>
+                                    <span>25 JULY, 2022</span>
+                                </div>
+                                <div class="blog_col_content_bottom">
+                                    <div class="blog_col_content_bottom_left">
+                                        <div class="blog_content_left_img">
+                                            <img src="image/admin.jpg" alt="">
+                                        </div>
+                                        <h5 class="blog_left_img_title">
+                                            <a href="#.">J.parker</a>
+                                        </h5>
+                                    </div>
+                                    <div class="blog_col_content_bottom_right">
+                                        <ul>
+                                            <li>
+                                                <a href="#."><img src="image/share.png" alt="share"></a>
+                                            </li>
+                                            <li>
+                                                <a href="#."><img src="image/heart.png" alt="like"></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog_col col-4">
+                        <div class="blog_col_inr">
+                            <div class="blog_col_img">
+                                <img src="image/b-3.jpg" alt="">
+                            </div>
+                            <div class="blog_col_content">
+                                <div class="blog_col_content_top">
+                                    <a href="#.">Rowan an orangutan known & loved</a>
+                                    <span>25 JULY, 2022</span>
+                                </div>
+                                <div class="blog_col_content_bottom">
+                                    <div class="blog_col_content_bottom_left">
+                                        <div class="blog_content_left_img">
+                                            <img src="image/admin.jpg" alt="">
+                                        </div>
+                                        <h5 class="blog_left_img_title">
+                                            <a href="#.">J.parker</a>
+                                        </h5>
+                                    </div>
+                                    <div class="blog_col_content_bottom_right">
+                                        <ul>
+                                            <li>
+                                                <a href="#."><img src="image/share.png" alt="share"></a>
+                                            </li>
+                                            <li>
+                                                <a href="#."><img src="image/heart.png" alt="like"></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="contact_us">
+        <div class="wrapper">
+            <div class="contact_us_inr">
+                <h2 class="contact_title">Get In Touch</h2>
+                <div class="contact_box clearfix">
+                    <div class="contact_box_left col-4">
+                        <h3>Contact Info</h3>
+                        <div class="contact_box_info">
+                            <ul>
+                                <li class="phone">+88 1234 56789</li>
+                                <li class="mail">contact@yourmail.com</li>
+                                <li class="address">203, Envato Labs, Behind Alis Steet,Australia</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="contact_box_right col-8">
+                        <div class="contact_box_form half_width">
+                            <input type="text" name="name" placeholder="Enter Your Name">
+                        </div>
+                        <div class="contact_box_form half_width">
+                            <input type="text" name="mail" placeholder="Enter Your Email">
+                        </div>
+                        <div class="contact_box_form">
+                            <textarea placeholder="Enter Your Message"></textarea>
+                        </div>
+                        <div class="contact_btn">
+                            <button type="submit">contact now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script type="text/javascript" src="js/slick.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
