--- a/index.html
+++ b/index.html
@@ -386,6 +386,87 @@
             </div>
         </div>
     </section>
+    <section id="footer">
+        <div class="wrapper">
+            <div class="footer_top clearfix">
+                <div class="footer_col col-3">
+                    <div class="footer_logo">
+                        <a href="index.html"><img src="image/logo.png" alt="footer_logo"></a>
+                    </div>
+                    <div class="footer_content">
+                        <p>Gravida nibh vel velit auctor aliquetn quibibendum auci elit cons equat ipsutis sem nibh id elit.</p>
+                        <div class="footer_social">
+                            <ul>
+                                <li class="footer_fb">
+                                    <a href="#."></a>
+                                </li>
+                                <li class="footer_twitter">
+                                    <a href="#."></a>
+                                </li>
+                                <li class="footer_insta">
+                                    <a href="#."></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer_col col-3">
+                    <h4>Services</h4>
+                    <div class="footer_link">
+                        <ul>
+                            <li><a href="#.">Architechture Design</a></li>
+                            <li><a href="#.">Interior Design</a></li>
+                            <li><a href="#.">Autocad Services</a></li>
+                            <li><a href="#.">Lighting Design</a></li>
+                            <li><a href="#.">Poster Design</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer_col col-3">
+                    <h4>Help</h4>
+                    <div class="footer_link">
+                        <ul>
+                            <li><a href="#.">Forum</a></li>
+                            <li><a href="#.">Blog</a></li>
+                            <li><a href="#.">Help Center</a></li>
+                            <li><a href="#.">Contact Us</a></li>
+                            <li><a href="#.">Privacy Policy</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer_col col-3">
+                    <h4>Conatct Info</h4>
+                    <div class="footer_contact">
+                        <ul>
+                            <li>
+                                <h6>Phone:</h6>
+                                <div class="footer_contact_info">
+                                    <p>+88123 4567 890</p>
+                                    <p>+88123 4567 890</p>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Email:</h6>
+                                <div class="footer_contact_info">
+                                    <p>contact@yourmail.com</p>
+                                    <p>support@yourmail.com</p>
+                                </div>
+                            </li>
+                            <li>
+                                <h6>Address:</h6>
+                                <div class="footer_contact_info">
+                                    <p>5078 Jensen Key, Port Kaya, WV 73505</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_bottom">
+                <p>Crafted by <a href="#.">UIdeck</a></p>
+            </div>
+        </div>
+    </section>
     <script type="text/javascript" src="js/slick.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
