add social icon in team-section

--- a/index.html
+++ b/index.html
@@ -314,14 +314,14 @@
                   <h6>FOUNDER</h6>
                   <div class="team_col_social">
                     <ul>
-                      <li>
-                        <a href="#."><img src="" alt="facebook" /></a>
+                      <li class="team_fb">
+                        <a href="#."></a>
                       </li>
-                      <li>
-                        <a href="#."><img src="" alt="facebook" /></a>
+                      <li class="team_twitter">
+                        <a href="#."></a>
                       </li>
-                      <li>
-                        <a href="#."><img src="" alt="facebook" /></a>
+                      <li class="team_insta">
+                        <a href="#."></a>
                       </li>
                     </ul>
                   </div>
@@ -340,14 +340,14 @@
                   <h6>consultant</h6>
                   <div class="team_col_social">
                     <ul>
-                      <li>
-                        <a href="#."><img src="" alt="facebook" /></a>
+                      <li class="team_fb">
+                        <a href="#."></a>
                       </li>
-                      <li>
-                        <a href="#."><img src="" alt="twitter" /></a>
+                      <li class="team_twitter">
+                        <a href="#."></a>
                       </li>
-                      <li>
-                        <a href="#."><img src="" alt="instagram" /></a>
+                      <li class="team_insta">
+                        <a href="#."></a>
                       </li>
                     </ul>
                   </div>
@@ -366,14 +366,14 @@
                   <h6>business manager</h6>
                   <div class="team_col_social">
                     <ul>
-                      <li>
-                        <a href="#."><img src="" alt="facebook" /></a>
+                      <li class="team_fb">
+                        <a href="#."></a>
                       </li>
-                      <li>
-                        <a href="#."><img src="" alt="twitter" /></a>
+                      <li class="team_twitter">
+                        <a href="#."></a>
                       </li>
-                      <li>
-                        <a href="#."><img src="" alt="instagram" /></a>
+                      <li class="team_insta">
+                        <a href="#."></a>
                       </li>
                     </ul>
                   </div>
@@ -392,14 +392,14 @@
                   <h6>marketing manager</h6>
                   <div class="team_col_social">
                     <ul>
-                      <li>
-                        <a href="#."><img src="" alt="facebook" /></a>
+                      <li class="team_fb">
+                        <a href="#."></a>
                       </li>
-                      <li>
-                        <a href="#."><img src="" alt="twitter" /></a>
+                      <li class="team_twitter">
+                        <a href="#."></a>
                       </li>
-                      <li>
-                        <a href="#."><img src="" alt="instagram" /></a>
+                      <li class="team_insta">
+                        <a href="#."></a>
                       </li>
                     </ul>
                   </div>
