add video section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Furnish</title>
+    <link rel="stylesheet" href="css/magnific-popup.css" />
     <link rel="stylesheet" type="text/css" href="css/slick.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -410,6 +411,46 @@
         </div>
       </div>
     </section>
+    <section id="video_slider">
+      <div class="video_slider_otr"></div>
+      <div class="wrapper">
+        <div class="video_slider_inr clearfix">
+          <div class="video_slider_content col-5">
+            <div class="video_slider_inr">
+              <div class="video_slider_text">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit, sed
+                  do eiusmod tempor inc ididunt ut labore et dolore magna
+                  aliqua.
+                </p>
+                <h5>Roma De Suza</h5>
+                <h6>- CEO, Tesla</h6>
+              </div>
+            </div>
+            <div class="video_slider_inr">
+              <div class="video_slider_text">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit, sed
+                  do eiusmod tempor inc ididunt ut labore et dolore magna
+                  aliqua.
+                </p>
+                <h5>Lisa white</h5>
+                <h6>- Designer, Walmart</h6>
+              </div>
+            </div>
+          </div>
+          <div class="video_slider_icon col-7">
+            <div class="video_slider_icon_inr">
+              <a
+                class="popup-video"
+                href="https://www.youtube.com/watch?v=l8ccw7BMrMA"
+              >
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="blog">
       <div class="wrapper">
         <div class="blog_inr">
@@ -664,6 +705,10 @@
     <script
       type="text/javascript"
       src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="js/jquery.magnific-popup.min.js"
     ></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
